--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,6 @@
 ######################## default configuration ####################
 publishDir = "docs"
+canonifyURLs = true
 baseURL = "https://yurachud.github.com/mypage"
 title = "Airspace | Creative Agency Hugo Template"
 theme = "airspace"
