--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://yurachud.github.com/mypage"
+baseURL = "https://yurachud.github.com/"
 title = "Airspace | Creative Agency Hugo Template"
 theme = "airspace"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
